add component Cards

--- a/src/index.css
+++ b/src/index.css
@@ -95,3 +95,44 @@ body {
     border-radius: 20px;
     background-color: #282828;
 }
+
+.video-card {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+.video-card img {
+    width: 100%;
+    border-radius: 10px;
+    object-fit: cover;
+    aspect-ratio: 16/9;
+}
+/* // para que se centre la imagen */
+.video-card footer {
+    display: grid;
+    gap: 0.5rem;
+    grid-template-columns: 2rem 1fr;
+    
+}
+
+.video-card footer img{
+    /* va a comenzar en la columna comienza y en cual termina */
+    grid-column: 1/2;
+    /* 3rem porque la columna tiene 3rem de ancho */
+    width: 2rem; 
+    height: 2rem;
+    border-radius: 50%;
+}
+
+.video-card-channel, .video-card-title {
+    grid-column: 2 / 3;
+}
+/* // para que se centre la imagen */
+
+#videos{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 1rem;
+    padding-top: 1rem;
+
+}
